nodejs-app-yamls/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-app-service
spec:
  selector:
    app: nodejs-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
  type: ClusterIP
